Revert "4.6.2 fix songdetails_controls loop icon spacing"
This reverts commit d098d6e19a46f9e0602f826fe6a823d8a5781cd8.

--- a/app/player/player.css
+++ b/app/player/player.css
@@ -4,7 +4,6 @@
     display: block;
 }
 .icon-wrap {
-    margin-left: 2px;
-    margin-right: 2px;
+    margin: 4px 2px;
     float: left;
 }
